# stakeout-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
api/: main.py
collector/: Dockerfile  requirements.txt
collector/dummy_graph/: graph.py  runner.py
collector/monitor/: __init__.py  callback_handler.py  db.py
dashboard/: index.html  package.json
dashboard/src/: App.jsx
stakeout-agent/: README.md  pyproject.toml
stakeout-agent/examples/: dashboard.py  dummy_app.py  dummy_crewai_app.py  dummy_crewai_async_app.py  seed_demo_data.py
stakeout-agent/stakeout_agent/: __init__.py  callback_handler.py  db.py
stakeout-agent/stakeout_agent/backends/: __init__.py  base.py  mongodb.py  postgres.py
stakeout-agent/stakeout_agent/callback_handler/: __init__.py  base.py  crewai.py  langgraph.py
stakeout-agent/tests/: test_callback_handler.py  test_crewai_callback.py  test_db.py  test_mongo_db.py  test_postgres_db.py
