[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stakeout-agent"
version = "0.1.0"
description = "Drop-in monitoring for LangGraph applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=1.1.9",
    "pymongo>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
