[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stakeout-agent"
version = "0.0.4"
description = "Drop-in monitoring for GenAI applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=1.1.9",
    "pymongo>=4.0",
]
authors = [
    { name = "Kyriakos Fragkeskos" }
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
crewai = [
    "crewai>=0.80",
]

[tool.hatch.build.targets.wheel]
packages = ["stakeout_agent"]


[tool.hatch.build.targets.sdist]
include = [
    "/stakeout_agent",
    "/tests",
    "/README.md",
    "/pyproject.toml"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
exclude = [
    "examples/*",
]
line-length = 120
indent-width = 4


[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
